@@ -207,6 +207,11 @@ private members and should not be accessed directly.
 </para>
 
 
+<!-- ##### ARG GtkSourceStyleScheme:description ##### -->
+<para>
+
+</para>
+
 <!-- ##### ARG GtkSourceStyleScheme:filename ##### -->
 <para>
 
@@ -255,25 +260,6 @@ private members and should not be accessed directly.
 </para>
 
 @scheme: 
-@Returns: 
-
-
-<!-- ##### FUNCTION gtk_source_style_scheme_get_matching_brackets_style ##### -->
-<para>
-
-</para>
-
-@scheme: 
-@Returns: 
-
-
-<!-- ##### FUNCTION gtk_source_style_scheme_get_current_line_color ##### -->
-<para>
-
-</para>
-
-@scheme: 
-@color: 
 @Returns: 
 
 
